# timeout

./: .gitignore  .travis.yml  CHANGES.md  LICENSE  README.md  timeout.cabal
src/Control/: Timeout.hs
src/Control/Timeout/: EventManager.hs  TimerManager.hs  Types.hs  Unique.hs  Utils.hs
src/Control/Timeout/EventManager/: Local.hs  PSQ.hs  Types.hs
src/Control/Timeout/TimerManager/: Local.hs  PSQ.hs
tests/: Tests.hs
tests/Control/Timeout/: Tests.hs
